rotation: Support rotation effect using elm_transit
Change-Id: If329f6582841c118a5e06ae6996cdadff0044ff1
Signed-off-by: MinJeong Kim <minjjj.kim@samsung.com>

--- a/configure.ac
+++ b/configure.ac
@@ -64,6 +64,10 @@ PKG_CHECK_MODULES(ENLIGHTENMENT, [enlightenment])
 AC_SUBST(ENLIGHTENMENT_CFLAGS)
 AC_SUBST(ENLIGHTENMENT_LIBS)
 
+PKG_CHECK_MODULES(ELEMENTARY, [elementary])
+AC_SUBST(ELEMENTARY_CFLAGS)
+AC_SUBST(ELEMENTARY_LIBS)
+
 # Find edje_cc
 PKG_CHECK_MODULES(EDJE, [edje >= 1.0.0])
 AC_ARG_WITH(edje-cc,
